package org.arvinw.jdk_proxy;

public interface Target {
    public void coreWork();
}
