@startuml
'https://plantuml.com/class-diagram

class Client

interface Target{
  request()
}
class Adapter{
  + Adapted obj
   request()
}

interface Adapted{
 + specificRequest()
}

class ConcreteAdapted{
  + specificRequest()
}

Target <.. Client
Target <|.. Adapter

ConcreteAdapted --|>Adapted
Adapter ..o Adapted


@enduml